--- a/css/styles.css
+++ b/css/styles.css
@@ -161,6 +161,7 @@ ul {
     font-size: 18px;
     line-height:2;
     letter-spacing: 0.06em;
+    text-decoration: none;
 
 }
 .port-link-text {
@@ -170,6 +171,7 @@ ul {
     font-size: 16px;
     line-height:1,88;
     letter-spacing: 0.03em;
+    text-decoration: none;
 }
 
 .footer {
