--- a/css/styles.css
+++ b/css/styles.css
@@ -92,6 +92,8 @@ ul {
     color: #FFFFFF;
     background-color: var(--accent-color);
     font-size: 16px;
+    width: 216px;
+    height: 50px;
     letter-spacing: 0.06em;
     align-items: center;
     text-align: center;
