--- a/css/styles.css
+++ b/css/styles.css
@@ -147,6 +147,7 @@ ul {
     line-height: 1,71;
     font-weight: 400;
     letter-spacing: 0,03;
+    text-decoration: none;
 }
 .benefit .benefit-title {
     color: var(--title-text-color);
@@ -154,6 +155,7 @@ ul {
     font-weight: 700;
     text-transform: uppercase;
     line-height:1,14;
+    text-decoration: none;
 }
 
 .port-link {
