--- a/css/styles.css
+++ b/css/styles.css
@@ -130,7 +130,9 @@ ul {
 .section-title {
     color:var(--title-text-color);
     font-weight: 700;
-    line-height: 1.14 ;   
+    line-height: 1.14 ; 
+    font-size: 36px;  
+    letter-spacing: 0.03em;
 }
 .section-img {
     display: block;
@@ -170,6 +172,7 @@ display: block;
 .benefit-title {
     color: var(--title-text-color);
     font-weight: 700;
+    font-size: 14px;
     text-transform: uppercase;
     line-height:1.14;
     text-decoration: none;
